developer1/src/objects/Position__c.object
<CustomObject>
    <description>This object stores information
about the open job positions at our company.</description>
    <fields>
        <fullName>Apex__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C__c</fullName>
        <defaultValue>false</defaultValue>
        <label>C#</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Educational_Requirements__c</fullName>
        <description>Minimum Education requirement.</description>
        <label>Educational Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <picklist>
            <picklistValues>
                <fullName>Finance</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehousing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hire_By__c</fullName>
        <defaultValue>TODAY()+90</defaultValue>
        <label>Hire By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Java__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Java</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Javascript__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Javascript</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <description>High-level description
of the job and its duties</description>
        <label>Job Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <label>Job Level</label>
        <picklist>
            <controllingField>Functional_Area__c</controllingField>
            <picklistValues>
                <fullName>FN-100</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>FN-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FN-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FN-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC-400</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>San Francisco, CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Austin, TX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boulder, CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London, England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York, NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai, India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sydney, Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tokyo, Japan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Pay__c</fullName>
        <label>Max Pay</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Pay__c</fullName>
        <label>Min Pay</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Open date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Responsibilities__c</fullName>
        <description>a fiel describing the responsibilities of the job holder</description>
        <label>Responsibilities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Skills_Required__c</fullName>
        <description>Skills Required to take up the job</description>
        <label>Skills Required</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>New Position
Pending Approval
Open Approved
Closed-Filled
Closed-Not Approved
Closed-Canceled</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New Position</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>open-Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close-Filled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close-Not Filled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Travel_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full Time</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>close_date__c</fullName>
        <label>close date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>open_days__c</fullName>
        <formula>IF( ISBLANK( close_date__c ),TODAY() - Open_date__c , close_date__c  -  Open_date__c )</formula>
        <label>open days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Position</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PositionTitle</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <recordTypes>
        <fullName>IT_Position</fullName>
        <active>true</active>
        <description>Record type for all IT positions</description>
        <label>IT Position</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Position</fullName>
        <active>true</active>
        <description>Record type for all non-IT</description>
        <label>Standard Position</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>close_date_rule</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( close_date__c )&amp;&amp;( ISPICKVAL( Status__c , &quot;close-filled&quot;)|| ISPICKVAL( Status__c , &quot;closed-not filled&quot;) )</errorConditionFormula>
        <errorDisplayField>close_date__c</errorDisplayField>
        <errorMessage>Close Date must be specified
when Status is set to &apos;Closed.&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>min_pay_rule</fullName>
        <active>true</active>
        <errorConditionFormula>Min_Pay__c &gt; Max_Pay__c</errorConditionFormula>
        <errorDisplayField>Min_Pay__c</errorDisplayField>
        <errorMessage>The minimum pay cannot be greater than the maximum pay</errorMessage>
    </validationRules>
</CustomObject>